# simplex-solver

./: .gitignore  LICENSE  README.md  __init__.py  problems.txt  pyproject.toml  requirements.txt  views.py
simplexsolver/: __init__.py  views.py
simplexsolver/simplex/: branch_and_bound.py  dual_validator.py  graphic_solution.py  primal_tableau.py  simplex_algorithm.py  teste.txt
simplexsolver/static/CSS/: base.css  graph.css  index.css  integer.css  tableaus.css
simplexsolver/static/JS/: generateProblem.js  saveData.js  slider.js
simplexsolver/templates/: base.html  dualSimplex.html  graph.html  index.html  integerSolution.html  tabularSimplex.html
static/CSS/: base.css  index.css  integer.css  tableaus.css
static/JS/: generateProblem.js  slider.js  verificacao.js
templates/: base.html  dualSimplex.html  index.html  integerSolution.html  tabularSimplex.html
